Updated file list

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,5 @@
-# Object files
 *.o
-
-# Libraries
-*.lib
-*.a
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# Vim backup files
 .*.swp
 *~
+*.out
+*.pyc
